package com.makulky.socialcooking

data class datosRecetas(
    val id: Int,
    val nombre: String,
    val autor: String,
    val dificultad: String,
    val urlFoto: String
)