package com.makulky.socialcooking

class recetasProvider() {

    companion object{

        val listaRecetas= listOf<datosRecetas>(
            datosRecetas(
                0,
                "Tarta de queso",
                "Manuel",
                "2/5",
                "https://recetasdecocina.elmundo.es/wp-content/uploads/2017/02/tarta-de-queso-fr%C3%ADa-casera.jpg"
            ),
            datosRecetas(
                1,
                "Carrilleras",
                "Francisca",
                "3/5",
                "https://i.blogs.es/115a45/carrilleras_vino/1366_2000.jpg"
            ),
            datosRecetas(
                2,
                "Pato a la naranja",
                "Daniel",
                "4/5",
                "https://t1.uc.ltmcdn.com/es/posts/2/2/1/como_hacer_pato_a_la_naranja_30122_orig.jpg"
            ),
            datosRecetas(
                3,
                "Cerdo agridulce",
                "María",
                "3/5",
                "https://assets.unileversolutions.com/recipes-v2/247009.jpg"
            ),
            datosRecetas(
                4,
                "Gazpacho",
                "Laura",
                "1/5",
                "https://imag.bonviveur.com/gazpacho-andaluz-casero.jpg"
            ),
            datosRecetas(
                5,
                "Salmorejo",
                "Laura",
                "1/5",
                "https://i.blogs.es/4f8b2a/1366_2000/840_560.jpg"
            ),
            datosRecetas(
                6,
                "Salchichas al vino",
                "David",
                "2/5",
                "https://recetasdecocina.elmundo.es/wp-content/uploads/2023/08/receta-salchichas-al-vino-blanco.jpg"
            ),
            datosRecetas(
                7,
                "Costillas de cerdo",
                "Juana",
                "2/5",
                "https://imag.bonviveur.com/costillas-de-cerdo-al-horno.webp"
            )

        )
    }
}