package com.makulky.socialcooking

import androidx.lifecycle.ViewModel

class sharedViewModel:ViewModel() {

    var usuario:String? = null

}